Fixed namespaces and task text typos in hometasks for lesson 1 and 2

--- a/ITStep.CSharp.Templates/templates/lesson-1/src/hometasks/Hometask-02/Hometask-02.csproj
+++ b/ITStep.CSharp.Templates/templates/lesson-1/src/hometasks/Hometask-02/Hometask-02.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>Hometask__02</RootNamespace>
+    <RootNamespace>StudentName.Hometask_02</RootNamespace>
   </PropertyGroup>
 
 </Project>
