--- a/ITStep.CSharp.Templates/templates/lesson-1/src/hometasks/Hometask-03/Hometask-03.csproj
+++ b/ITStep.CSharp.Templates/templates/lesson-1/src/hometasks/Hometask-03/Hometask-03.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>Hometask__03</RootNamespace>
+    <RootNamespace>StudentName.Hometask_03</RootNamespace>
   </PropertyGroup>
 
 </Project>
