--- a/ITStep.CSharp.Templates/templates/lesson-1/src/practice/Practice-01/Practice-01.csproj
+++ b/ITStep.CSharp.Templates/templates/lesson-1/src/practice/Practice-01/Practice-01.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>Practice_01</RootNamespace>
+    <RootNamespace>StudentName.Practice_01</RootNamespace>
   </PropertyGroup>
 
 </Project>
