--- a/ITStep.CSharp.Templates/templates/lesson-1/src/practice/Practice-03/Practice-03.csproj
+++ b/ITStep.CSharp.Templates/templates/lesson-1/src/practice/Practice-03/Practice-03.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>Practice__03</RootNamespace>
+    <RootNamespace>StudentName.Practice_03</RootNamespace>
   </PropertyGroup>
 
 </Project>
