--- a/ITStep.CSharp.Templates/templates/lesson-2/src/practice/Practice-02/Practice-02.csproj
+++ b/ITStep.CSharp.Templates/templates/lesson-2/src/practice/Practice-02/Practice-02.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>Practice__02</RootNamespace>
+    <RootNamespace>StudentName.Practice_02</RootNamespace>
   </PropertyGroup>
 
 </Project>
