--- a/ITStep.CSharp.Templates/templates/lesson-2/src/practice/Practice-05/Practice-05.csproj
+++ b/ITStep.CSharp.Templates/templates/lesson-2/src/practice/Practice-05/Practice-05.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>Practice__05</RootNamespace>
+    <RootNamespace>StudentName.Practice_05</RootNamespace>
   </PropertyGroup>
 
 </Project>
