--- a/VR.Templates/templates/cs-lesson-hometask/src/hometasks/Hometask-TaskNumber/Hometask-TaskNumber.csproj
+++ b/VR.Templates/templates/cs-lesson-hometask/src/hometasks/Hometask-TaskNumber/Hometask-TaskNumber.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>Hometask_TaskNumber</RootNamespace>
+    <RootNamespace>StudentName.HometaskTaskNumber</RootNamespace>
   </PropertyGroup>
 
 </Project>
