--- a/VR.Templates/templates/cs-lesson-practice/src/practice/Practice-TaskNumber/Practice-TaskNumber.csproj
+++ b/VR.Templates/templates/cs-lesson-practice/src/practice/Practice-TaskNumber/Practice-TaskNumber.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>Practice_TaskNumber</RootNamespace>
+    <RootNamespace>StudentName.PracticeTaskNumber</RootNamespace>
   </PropertyGroup>
 
 </Project>
