--- a/ITStep.CSharp.Templates/ITStep.CSharp.Templates.csproj
+++ b/ITStep.CSharp.Templates/ITStep.CSharp.Templates.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <PackageType>Template</PackageType>
     <PackageId>ITStep.CSharp.Templates</PackageId>
-    <PackageVersion>0.2</PackageVersion>
+    <PackageVersion>0.3-alpha.1</PackageVersion>
     <PackageTags>Templates;dotnet cli</PackageTags>
     <Title>ITStep Templates for C# course</Title>
     <Description>
